test/fail/ac/ruleunknownvaruse.app
//Error: Variable b not defined

application test

access control rules

  rule page name(a:Bool)
  {
    a && b
  }